# mailr-nal

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
examples/RIOT/mail-command-example/: Makefile
examples/RIOT/mailr-example/: Makefile  main.c
examples/RIOT/mailr_riot_module/: Cargo.toml  Makefile  Makefile.dep  Makefile.include
examples/RIOT/mailr_riot_module/include/mailr/: smtp.h
examples/RIOT/mailr_riot_module/src/: error.rs  ffi.rs  lib.rs  nal.rs
src/: auth.rs  lib.rs  message.rs  nb_fut.rs
src/io/: mod.rs  read.rs  stream.rs  write.rs
src/smtp/: commands.rs  mod.rs  response.rs
src/smtp/extensions/: auth.rs  mod.rs
tests/: README.md  smtp_native_tls.rs  smtp_std_embedded_nal.rs  test-smtpd.py
tests/common/: Cargo.toml
tests/common/src/: lib.rs
tests/data/: cert.pem  key.pem
