[package]
name = "mailr-nal"
version = "0.1.0"
edition = "2021"
authors = ["WataNekko <88185666+WataNekko@users.noreply.github.com>"]
description = "Minimal SMTP client on top of embedded-nal"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
embedded-nal = "0.8.0"
enumset = "1.1.5"

[dev-dependencies]
native-tls = "0.2.12"
std-embedded-nal = "0.3.0"
test-common = { path = "tests/common" }
